[gd_scene load_steps=11 format=4 uid="uid://c7jspbwpmg3t3"]

[ext_resource type="PackedScene" uid="uid://be7hc4c32osm8" path="res://flying_books.tscn" id="1_jg0dc"]
[ext_resource type="Script" uid="uid://dmy17yjmh7dnk" path="res://level_2.gd" id="1_n7ypv"]
[ext_resource type="PackedScene" uid="uid://bsikduaoo7n2x" path="res://MainCharacter.tscn" id="1_nmjpi"]
[ext_resource type="Texture2D" uid="uid://bniqu6kbh2m7y" path="res://Assets/level 2 tileset.png" id="3_xdadj"]
[ext_resource type="PackedScene" uid="uid://dxr43fcsmab6f" path="res://jacob.tscn" id="5_7j8ne"]
[ext_resource type="Script" uid="uid://b4rw41vs4kvne" path="res://jacob.gd" id="6_7j8ne"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1y8me"]
texture = ExtResource("3_xdadj")
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0

[sub_resource type="TileSet" id="TileSet_n7ypv"]
sources/0 = SubResource("TileSetAtlasSource_1y8me")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xdadj"]
size = Vector2(16, 16)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_7j8ne"]
normal = Vector2(1, 0)
distance = 0.270459

[node name="Level2" type="Node2D"]
position = Vector2(0, -5.96046e-08)
scale = Vector2(0.997983, 1.01378)
script = ExtResource("1_n7ypv")

[node name="Player" parent="." instance=ExtResource("1_nmjpi")]
position = Vector2(-86, 50)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
position_smoothing_enabled = true

[node name="flying books" parent="." instance=ExtResource("1_jg0dc")]
position = Vector2(-153.309, -22.6874)

[node name="flying books2" parent="." instance=ExtResource("1_jg0dc")]
position = Vector2(-242.489, -25.6466)

[node name="flying books3" parent="." instance=ExtResource("1_jg0dc")]
position = Vector2(-323.653, -19.7282)

[node name="base" type="TileMapLayer" parent="."]
z_index = -3
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAACAAIAAAACAAAAAAACAAIAAAABAAAAAAACAAIAAAD//wAAAAACAAIAAAADAAAAAAACAAIAAAAFAAAAAAACAAIAAAAHAAAAAAACAAIAAAAHAAIAAAABAAIAAAAFAAIAAAABAAIAAAADAAIAAAABAAIAAAABAAIAAAABAAIAAAD//wIAAAABAAIAAAD9/wIAAAABAAIAAAD7/wIAAAABAAIAAAD5/wAAAAACAAIAAAD5/wIAAAABAAIAAAD3/wIAAAABAAIAAAD3/wAAAAACAAIAAAD3/wQAAAADAAIAAAD5/wQAAAADAAIAAAD7/wQAAAADAAIAAAD9/wQAAAADAAIAAAD//wQAAAADAAIAAAABAAQAAAADAAIAAAADAAQAAAADAAIAAAAFAAQAAAADAAIAAAAHAAQAAAADAAIAAAD4/wQAAAADAAIAAAD6/wQAAAADAAIAAAD8/wQAAAADAAIAAAD+/wQAAAADAAIAAAAAAAQAAAADAAIAAAACAAQAAAADAAIAAAAEAAQAAAADAAIAAAAGAAQAAAADAAIAAAAIAAQAAAADAAIAAAAIAAIAAAABAAIAAAAGAAIAAAABAAIAAAAEAAIAAAABAAIAAAACAAIAAAABAAIAAAAAAAIAAAABAAIAAAD+/wIAAAABAAIAAAD8/wIAAAABAAIAAAD6/wIAAAABAAIAAAD4/wIAAAABAAIAAAD4/wAAAAACAAIAAAD6/wAAAAACAAIAAAAEAAAAAAACAAIAAAAGAAAAAAACAAIAAAAIAAAAAAACAAIAAAD6/wEAAAABAAIAAAD8/wEAAAABAAIAAAD+/wEAAAABAAIAAAAAAAEAAAABAAIAAAACAAEAAAABAAIAAAAEAAEAAAABAAIAAAAGAAEAAAABAAIAAAAIAAEAAAABAAIAAAAIAAMAAAADAAIAAAAGAAMAAAADAAIAAAAEAAMAAAADAAIAAAACAAMAAAADAAIAAAAAAAMAAAADAAIAAAD+/wMAAAADAAIAAAD8/wMAAAAAAAQAAAD6/wMAAAADAAIAAAD4/wEAAAABAAIAAAD4/wMAAAADAAIAAAD3/wMAAAADAAIAAAD3/wEAAAABAAIAAAD5/wEAAAABAAIAAAD5/wMAAAADAAIAAAD7/wMAAAADAAIAAAD7/wEAAAABAAIAAAD9/wEAAAABAAIAAAD9/wMAAAADAAIAAAD//wMAAAADAAIAAAD//wEAAAABAAIAAAABAAEAAAABAAIAAAABAAMAAAADAAIAAAADAAMAAAADAAIAAAADAAEAAAABAAIAAAAFAAEAAAABAAIAAAAFAAMAAAADAAIAAAAHAAMAAAADAAIAAAAHAAEAAAABAAIAAAD7/wAAAAACAAIAAAD8/wAAAAACAAIAAAD+/wAAAAACAAIAAAD3////AAACAAIAAAD4////AAACAAIAAAD5////AAACAAIAAAD6////AAACAAIAAAD7////AAACAAIAAAD8////AAACAAIAAAD9////AAACAAIAAAD+////AAACAAIAAAD/////AAACAAIAAAAAAP//AAACAAIAAAABAP//AAACAAIAAAAEAP//AAACAAIAAAAFAP//AAACAAIAAAAGAP//AAACAAIAAAAHAP//AAACAAIAAAAIAP//AAACAAIAAAAIAP7/AAAAAAIAAAAIAP3/AAAAAAIAAAAHAP7/AAAAAAIAAAAGAP7/AAAAAAIAAAAFAP7/AAAAAAIAAAAFAP3/AAAAAAIAAAAEAP3/AAAAAAIAAAADAP3/AAAAAAIAAAACAP3/AAAAAAIAAAABAP3/AAAAAAIAAAAAAP3/AAAAAAIAAAD///3/AAAAAAIAAAD+//3/AAAAAAIAAAD9//3/AAAAAAIAAAD8//3/AAAAAAIAAAD7//3/AAAAAAIAAAD6//3/AAAAAAIAAAD5//3/AAAAAAIAAAD4//3/AAAAAAIAAAD3//3/AAAAAAIAAAD3//7/AAAAAAIAAAD4//7/AAAAAAIAAAD5//7/AAAAAAIAAAD6//7/AAAAAAIAAAD7//7/AAAAAAIAAAD8//7/AAAAAAIAAAD9//7/AAAAAAIAAAD+//7/AAAAAAIAAAD///7/AAAAAAIAAAAAAP7/AAAAAAIAAAABAP7/AAAAAAIAAAACAP7/AAAAAAIAAAADAP7/AAAAAAIAAAAEAP7/AAAAAAIAAAAGAP3/AAAAAAIAAAAHAP3/AAAAAAIAAAAIAPz/AAADAAIAAAAIAPv/AAADAAIAAAAHAPv/AAADAAIAAAAGAPv/AAADAAIAAAAFAPv/AAADAAIAAAAEAPv/AAADAAIAAAADAPv/AAADAAIAAAACAPv/AAADAAIAAAABAPv/AAADAAIAAAAAAPv/AAADAAIAAAD///v/AAADAAIAAAD+//v/AAADAAIAAAD9//v/AAADAAIAAAD8//v/AAADAAIAAAD7//v/AAADAAIAAAD6//v/AAADAAIAAAD5//v/AAADAAIAAAD4//v/AAADAAIAAAD3//v/AAADAAIAAAD3//z/AAADAAIAAAD4//z/AAADAAIAAAD5//z/AAADAAIAAAD6//z/AAADAAIAAAD7//z/AAADAAIAAAD8//z/AAADAAIAAAD9//z/AAADAAIAAAD///z/AAADAAIAAAAAAPz/AAADAAIAAAABAPz/AAADAAIAAAACAPz/AAADAAIAAAADAPz/AAADAAIAAAAEAPz/AAADAAIAAAAFAPz/AAADAAIAAAAGAPz/AAADAAIAAAAHAPz/AAADAAIAAAD+//z/AAADAAIAAAACAP//AAACAAIAAAADAP//AAACAAIAAAD9/wAAAAACAAIAAADy/wMAAAADAAIAAADy/wQAAAADAAIAAADz/wMAAAADAAIAAADz/wQAAAADAAIAAAD0/wMAAAADAAIAAAD0/wQAAAADAAIAAAD1/wMAAAADAAIAAAD1/wQAAAADAAIAAAD2/wMAAAADAAIAAAD2/wQAAAADAAIAAADy/wEAAAABAAIAAADy/wIAAAABAAIAAADz/wEAAAABAAIAAADz/wIAAAABAAIAAAD0/wEAAAABAAIAAAD0/wIAAAABAAIAAAD1/wEAAAABAAIAAAD1/wIAAAABAAIAAAD2/wEAAAABAAIAAAD2/wIAAAABAAIAAADy////AAACAAIAAADy/wAAAAACAAIAAADz////AAACAAIAAADz/wAAAAACAAIAAAD0////AAACAAIAAAD0/wAAAAACAAIAAAD1////AAACAAIAAAD1/wAAAAACAAIAAAD2////AAACAAIAAAD2/wAAAAACAAIAAADy//v/AAADAAIAAADy//z/AAADAAIAAADz//v/AAADAAIAAADz//z/AAADAAIAAAD0//v/AAADAAIAAAD0//z/AAADAAIAAAD1//v/AAADAAIAAAD1//z/AAADAAIAAAD2//v/AAADAAIAAAD2//z/AAADAAIAAAD2//7/AAAAAAIAAADy//3/AAAAAAIAAADy//7/AAAAAAIAAADz//3/AAAAAAIAAADz//7/AAAAAAIAAAD0//3/AAAAAAIAAAD0//7/AAAAAAIAAAD1//3/AAAAAAIAAAD1//7/AAAAAAIAAAD2//3/AAAAAAIAAAAJAP3/AAAAAAIAAAAJAP7/AAAAAAIAAAAKAP3/AAAAAAIAAAAKAP7/AAAAAAIAAAALAP3/AAAAAAIAAAALAP7/AAAAAAIAAAAMAP3/AAAAAAIAAAAMAP7/AAAAAAIAAAANAP3/AAAAAAIAAAANAP7/AAAAAAIAAAAOAP3/AAAAAAIAAAAOAP7/AAAAAAIAAAAPAP3/AAAAAAIAAAAPAP7/AAAAAAIAAAAJAPv/AAADAAIAAAAJAPz/AAADAAIAAAAKAPv/AAADAAIAAAAKAPz/AAADAAIAAAALAPv/AAADAAIAAAALAPz/AAADAAIAAAAMAPv/AAADAAIAAAAMAPz/AAADAAIAAAANAPv/AAADAAIAAAANAPz/AAADAAIAAAAOAPv/AAADAAIAAAAOAPz/AAADAAIAAAAPAPv/AAADAAIAAAAPAPz/AAADAAIAAAAJAP//AAACAAIAAAAJAAAAAAACAAIAAAAKAP//AAACAAIAAAAKAAAAAAACAAIAAAALAP//AAACAAIAAAALAAAAAAACAAIAAAAMAP//AAACAAIAAAAMAAAAAAACAAIAAAANAP//AAACAAIAAAANAAAAAAACAAIAAAAOAP//AAACAAIAAAAOAAAAAAACAAIAAAAPAP//AAACAAIAAAAPAAAAAAACAAIAAAAJAAEAAAABAAIAAAAJAAIAAAABAAIAAAAKAAEAAAABAAIAAAAKAAIAAAABAAIAAAALAAEAAAABAAIAAAALAAIAAAABAAIAAAAMAAEAAAABAAIAAAAMAAIAAAABAAIAAAANAAEAAAABAAIAAAANAAIAAAABAAIAAAAOAAEAAAABAAIAAAAOAAIAAAABAAIAAAAPAAEAAAABAAIAAAAPAAIAAAABAAIAAAAJAAMAAAADAAIAAAAJAAQAAAADAAIAAAAKAAMAAAADAAIAAAAKAAQAAAADAAIAAAALAAMAAAADAAIAAAALAAQAAAADAAIAAAAMAAMAAAADAAIAAAAMAAQAAAADAAIAAAANAAMAAAADAAIAAAANAAQAAAADAAIAAAAOAAMAAAADAAIAAAAOAAQAAAADAAIAAAAPAAMAAAADAAIAAAAPAAQAAAADAAIAAAA=")
tile_set = SubResource("TileSet_n7ypv")

[node name="secret0tile" type="TileMapLayer" parent="."]
visible = false
z_index = -1
use_parent_material = true
tile_map_data = PackedByteArray("AAD8/wMAAAABAAQAAAA=")
tile_set = SubResource("TileSet_n7ypv")

[node name="table" type="TileMapLayer" parent="."]
z_index = -2
use_parent_material = true
tile_map_data = PackedByteArray("AAD9/wIAAAAAAAMAAAD9/wEAAAAAAAMAAAD9/wAAAAAAAAMAAAD9////AAAAAAMAAAD9//7/AAAAAAMAAAD9//3/AAACAAMAAAD+//3/AAABAAMAAAD///3/AAABAAMAAAAAAP3/AAABAAMAAAABAP3/AAABAAMAAAACAP3/AAABAAMAAAADAP3/AAABAAMAAAAEAP3/AAABAAMAAAAFAP3/AAABAAMAAAAGAP3/AAABAAMAAAAHAP3/AAADAAMAAAAHAP7/AAAAAAMAAAAHAAEAAAAAAAMAAAAHAAIAAAAAAAMAAAAHAAAAAAAAAAMAAAAHAP//AAAAAAMAAAA=")
tile_set = SubResource("TileSet_n7ypv")

[node name="jacob" parent="." instance=ExtResource("5_7j8ne")]
position = Vector2(57, -1)
scale = Vector2(5.92735, 5.89007)
script = ExtResource("6_7j8ne")

[node name="level2pp" type="Area2D" parent="."]
position = Vector2(-56, 56)

[node name="PPcollision_box" type="CollisionShape2D" parent="level2pp"]
shape = SubResource("RectangleShape2D_xdadj")

[node name="bookspawner" type="Marker2D" parent="."]
position = Vector2(-148.299, -23.6738)

[node name="left border" type="StaticBody2D" parent="."]
position = Vector2(-143.289, 5.87944e-08)

[node name="CollisionShape2D" type="CollisionShape2D" parent="left border"]
shape = SubResource("WorldBoundaryShape2D_7j8ne")

[node name="Right border" type="StaticBody2D" parent="."]
position = Vector2(144.291, -0.986407)
rotation = 3.13833

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right border"]
shape = SubResource("WorldBoundaryShape2D_7j8ne")

[node name="top border" type="StaticBody2D" parent="."]
position = Vector2(1.00208, -76.9398)
rotation = 1.57339

[node name="CollisionShape2D" type="CollisionShape2D" parent="top border"]
shape = SubResource("WorldBoundaryShape2D_7j8ne")

[node name="bottom border" type="StaticBody2D" parent="."]
position = Vector2(0, 79.899)
rotation = -1.56907

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom border"]
shape = SubResource("WorldBoundaryShape2D_7j8ne")

[connection signal="body_entered" from="level2pp" to="." method="_on_level_2_pp_body_entered"]
[connection signal="body_entered" from="level2pp" to="jacob" method="_on_level_2_pp_body_entered"]
[connection signal="body_exited" from="level2pp" to="." method="_on_level_2_pp_body_exited"]
